        - Now only finding new outposts in rooms that are not occupied (hostiles/reserved/owned)
        - Fixed bug where on memory reset more than max outposts could potentially be added.
        - Will not outpost in rooms that have structures. Instead a dismantle mission will be generated first.
        - Will not spawn remote miner for a source with a full container.

    ROLES:

        Dismantler:

            - Handles dismantle missions.
            - Targets a path to controller first.
            - Targets a path to storage second.
            - Targets ramparts ontop of fullest structure third.


        Hauler:

            - Spawns units if more than 2 containers.
            - Units now only withdraw energy from source containers.
            - Units now deliver to spawn containers.
            - Units will try and deliver to stationary builders/upgraders/workers until a storage is present.

        Hub: 

            - Unit now loads and unloads all resources to and from terminal.

        LongHauler:

            - Spawns when there is a dismantle mission and target structures have reachable store stock.
            - Spawns factors in dropped resources.
 
        Remote builder:

            - Units no longer clear assigned room when finished building. 
                Units focus on upgrading controller if no construction tasks available.

        Remote hauler:

            - Units now deliver to spawn containers.
            - Units will try and deliver to stationary builders/upgraders/workers until a storage is present.
            - Units now find more direct path between rooms.

        Reserver:

            - Unit now attacks enemy owned controllers

        Scout:

            - Uses a cheaper algorithm to find next room to move to. Added some randomization to help break out of equal lastScanTimes.

        Defender:

            - Creep now uses ranged attack or heal when no healthy attack parts